added README.md, updated files to improve readability

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,11 +14,11 @@
                 <div>
                     <a href="/login" class = "navitem">Nav Item</a>
                     <a href="/changepassword" class = "navitem">Change Password</a>
-                    <a href="/login" class = "navitem">Log Out</a>
+                    <a href="/login" class = "navitem">Logout</a>
                 </div>
             {% else %}
                 <div>
-                    <a href="/login" class = "navitem">Log In</a>
+                    <a href="/login" class = "navitem">Login</a>
                     <a href="/register" class = "navitem">Register</a>
                 </div>
             {% endif %}
