--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 {% block title %}Login{% endblock %}
 
 {% block body %}
-    <h1>Log In</h1>
+    <h1>Login</h1>
     <div id = "center">
         <form action = "/login", method = "post">
             <div class="form-group">
@@ -14,7 +14,7 @@
               <label for="exampleInputPassword1">Password</label>
               <input type="password" class="form-control" id="exampleInputPassword1" name = "password" placeholder="Password">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Login</button>
         </form>
     </div>
 {% endblock %}
