--- a/templates/register.html
+++ b/templates/register.html
@@ -4,17 +4,6 @@
 
 {% block body %}
     <h1>Register</h1>
-    <!--<form action="/register", method = "post">
-        <div id = "center">
-            <input type="text" name = "username" placeholder = "Username" class = "formelem"><br>
-            <input type="text" name = "email" placeholder = "Email" class = "formelem">
-            <input type="text" name = "confirm-email" placeholder = "Confirm Email" class = "formelem"><br>
-            <input type="text" name = "password" placeholder = "Password" class = "formelem">
-            <input type="text" name = "confirm-password" placeholder = "Confirm Password" class = "formelem"><br>
-            <button type="submit" class="btn btn-primary formelem">Register</button>
-        </div>           
-    </form> -->
-
     <div id = "center">
         <form action = "/login", method = "post">
             <div class="form-group">
@@ -31,7 +20,7 @@
               <input type="password" class="form-control" id="exampleInputPassword1" name = "password" placeholder="Password">
               <input type="password" class="form-control" id="exampleInputPassword1" name = "confirm-password" placeholder="Confirm Password">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
 {% endblock %}
