--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
             <a href = "/"><h2>LOGO HERE</h2></a>
             {% if session.user_id %}
                 <div>
-                    <a href="/login" class = "navitem">Nav Item</a>
+                    <a href="/plans" class = "navitem">Plans / Appointments</a>
                     <a href="/changepassword" class = "navitem">Change Password</a>
                     <a href="/login" class = "navitem">Logout</a>
                 </div>
