--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Register</h1>
     <div id = "center">
-        <form action = "/login", method = "post">
+        <form action = "/register", method = "post">
             <div class="form-group">
               <label for="exampleInputEmail1">Username</label>
               <input type="text" class="form-control" name = "username" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Username">
