--- a/static/style.css
+++ b/static/style.css
@@ -27,6 +27,9 @@ h2{
 a{
     color: #4f4f4f;
 }
+b{
+    font-size: 1.5em;
+}
 a:hover{
     text-decoration: none !important;
 }
@@ -98,4 +101,18 @@ td{
     position: absolute;
     top: auto !important;
     bottom: 25%;
+}
+#indexdisplay{
+    border: 1px solid #d2d2d2;
+    width: 50%;
+    display: flex;
+    justify-content: space-around;
+    margin: auto;
+}
+#projects, #plans{
+    border-left: 1px solid #d2d2d2;
+    text-align: center;
+    display: flex;
+    flex-direction:column;
+    width: 50%;
 }
