--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,7 @@
                 <div>
                     <a href="/projects" class = "navitem">Projects</a>
                     <a href="/plans" class = "navitem">Plans / Appointments</a>
+                    <a href="/shared" class = "navitem">Shared Projects</a>
                     <a href="/changepassword" class = "navitem">Change Password</a>
                     <a href="/login" class = "navitem">Logout</a>
                 </div>
