--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
         <div id = "plans">
             <h2 style = "margin: 0 auto;">Plans / Appointments</h2>
             {% if not plans %}
-                <p>Nothing to show here...</p><br>
+                <p>Nothing to show here...</p>
                 <p>Add plans by going to the plans tab!</p>
             {% else %}
                 {% for plan in plans %}
