--- a/templates/plans.html
+++ b/templates/plans.html
@@ -26,7 +26,7 @@
     </div>
 
     <!--Add Plans-->
-    <button type="button" class="btn btn-outline-primary formelem" id = "addplan">Add Task</button>
+    <button type="button" class="btn btn-outline-primary formelem" id = "addplan" style = "margin-top: 10px;">Add Task</button>
     <div id = "center" class = "white popup">
         <h2>Add Plan</h2>
         <form action = "/plans", method = "post">
