--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,13 +3,14 @@
         <meta charset = "utf-8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" tyoe = "text/css" href="{{ url_for('static',filename='style.css') }}">
+        <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
         <title>
             ProdU {% block title %}{% endblock %}
         </title>
     </head>
     <body>
         <div id = "navbar">
-            <a href = "/"><h2>ProdU</h2></a>
+            <a href = "/"><h2 style = "font-family: 'Do Hyeon', sans-serif;">ProdU</h2></a>
             {% if session.user_id %}
                 <div>
                     <a href="/projects" class = "navitem">Projects</a>
@@ -25,7 +26,9 @@
                 </div>
             {% endif %}
         </div>
-        {% block body %}
-        {% endblock %}
+        <div style = "margin: 0 20px 0 20px">
+            {% block body %}
+            {% endblock %}
+        </div>
     </body>
 </html>
