--- a/templates/index.html
+++ b/templates/index.html
@@ -44,4 +44,5 @@
     {% endif %}
     
     <script src = "{{ url_for('static', filename = 'alert.js') }}"></script>
+    <script src = "{{ url_for('static', filename = 'theme.js') }}"></script>
 {% endblock %}
